syntax = "proto3";
option go_package=".;user";
// 定义需要的结构体
// 定义用户
message User{
  int32  id = 1;
  string  name = 2;
  string  address = 3;
  string  phone = 4;
}

message InsertUserReq{
  int32  id = 1;
  string  name = 2;
  string  address = 3;
  string  phone = 4;
}

message InsertUserResp{
  int32  id = 1;
  string  name = 2;
  string  address = 3;
  string  phone = 4;
}

message DeleteUserReq{
  int32 id = 1;
}

message DeleteUserResp{
}

message ModifyUserReq{
  int32  id = 1;
  string  name = 2;
  string  address = 3;
  string  phone = 4;
}

message ModifyUserResp{
}

message SelectUserReq{
  int32  id = 1;
}

message SelectUserResp{
  User users = 1;
}

// 定义接口
service UserService {
  //  增删改查
  rpc InstertUser (InsertUserReq) returns (InsertUserResp){}
  rpc DeletetUser (DeleteUserReq) returns (DeleteUserResp){}
  rpc ModifyUser (ModifyUserReq) returns (ModifyUserResp){}
  rpc SelectUser (SelectUserReq) returns (SelectUserResp){}
}